more customization for perkle

--- a/www/app/templates/application.hbs
+++ b/www/app/templates/application.hbs
@@ -8,7 +8,7 @@
         <h4 class="modal-title" id="myModalLabel">{{t "calculator.title"}}</h4>
       </div>
       <div class="modal-body text-center">
-        <iframe src=https://www.coincalculators.io/widget.aspx?crypto=callisto height ="270" width="325" frameBorder="0" style="overflow:hidden;" scrolling="no" ></iframe>
+        <iframe src=https://www.coincalculators.io/widget.aspx?crypto=perkle height ="270" width="325" frameBorder="0" style="overflow:hidden;" scrolling="no" ></iframe>
 
       </div>
       <div class="modal-footer">
